blockml/test/valid/04_calc_refs_dim/v11/v11d.dashboard
dashboard: v11d
title: 'sales'
reports:
- title: 'weekly'
  model: v11m
  select:
  - mf.calc1
  - mf.dim3
  - mf.dim4
  type: 'table'
