blockml/test/errors/01_yaml/e118/e118.dashboard
dashboard: e118
title: 'sales'
unk: 5         
reports:
- title: 'overview'
  model: e118m
  select:
  - a.dim1
  type: 'bar_vertical'
  data:
    x_field: a.dim1
    y_field: a.dim1
